<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RePague</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="registrar">Registrar</string>
    <string name="btnfacebook">Connect with FaceBook</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_registrar">RegistrarActivity</string>
    <string name="action_settings">Settings</string>

</resources>